fix spacing bug in home page

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,11 +7,10 @@ box-sizing: border-box;
 .nav-container{
     display:flex;
     flex-direction: column;
-    justify-content: space-between;
+ 
 }
 .history-page-container{
     display: flex;
-    height: 90vh;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
